share/kunquat/styles/default.css
/* ... */
QAbstractSpinBox::down-button
{
    subcontrol-origin: border;
    subcontrol-position: bottom right;
    border-radius: 0;
    border-bottom-right-radius: <border_thin_radius>;
    image: url(<icons_path>/arrow_down_tiny.png);
}

QHeaderView::section
{
    background-color: <bg_colour>;
}

QHeaderView::section:horizontal
{
    border-radius: 0;
}

QHeaderView::section:vertical
{
    border-radius: 0;
}

QLabel
{
    background-color: transparent;
}

QProgressBar
{
    background-color: <scrollbar_bg_colour>;
    color: <fg_colour>;
    text-align: center;
}

QProgressBar::chunk
{
    background-color: <text_selected_bg_colour>;
    color: <text_selected_fg_colour>;
}

QAbstractScrollArea
{
    border: <border_thin_width> solid;
    border-top-color: <bg_colour_dark>;
    border-left-color: <bg_colour_dark>;
    border-right-color: <bg_colour_light>;
    border-bottom-color: <bg_colour_light>;
    border-radius: <border_thin_radius>;
}

QAbstractScrollArea::corner
{
    background-color: transparent;
}

QScrollBar
{
    margin: 0;
    border: none;
    padding: 0;
    background-color: <scrollbar_bg_colour>;
}

QScrollBar:horizontal
{
    margin: 0 <scrollbar_margin> 0 <scrollbar_margin>;
    height: <scrollbar_size>;
}

QScrollBar:vertical
{
    margin: <scrollbar_margin> 0 <scrollbar_margin> 0;
    width: <scrollbar_size>;
}

QScrollBar::add-page, QScrollBar::sub-page
{
    background: transparent;
    margin: 0;
    padding: 0;
}

QScrollBar::handle
{
    padding: 0;
    background: <bg_colour>;
}

QScrollBar::handle:horizontal
{
    margin: 0 <tiny_arrow_button_size> 0 <tiny_arrow_button_size>;
    min-width: <scrollbar_size>;
}

QScrollBar::handle:vertical
{
    margin: <tiny_arrow_button_size> 0 <tiny_arrow_button_size> 0;
    min-height: <scrollbar_size>;
}

QScrollBar::add-line, QScrollBar::sub-line
{
    margin: 0;
    padding: 0;
    width: <tiny_arrow_button_size>;
    height: <tiny_arrow_button_size>;
}

QScrollBar::add-line:horizontal
{
    border-top-left-radius: 0;
    border-top-right-radius: <border_thin_radius>;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: <border_thin_radius>;
    subcontrol-position: right;
    subcontrol-origin: margin;
}

QScrollBar::add-line:vertical
{
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-left-radius: <border_thin_radius>;
    border-bottom-right-radius: <border_thin_radius>;
    subcontrol-position: bottom;
    subcontrol-origin: margin;
}

QScrollBar::sub-line:horizontal
{
    border-top-left-radius: <border_thin_radius>;
    border-top-right-radius: 0;
    border-bottom-left-radius: <border_thin_radius>;
    border-bottom-right-radius: 0;
    subcontrol-position: left;
    subcontrol-origin: margin;
}

QScrollBar::sub-line:vertical
{
    border-top-left-radius: <border_thin_radius>;
    border-top-right-radius: <border_thin_radius>;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    subcontrol-position: top;
    subcontrol-origin: margin;
}

QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical,
QScrollBar::left-arrow:horizontal, QScrollBar::right-arrow:horizontal
{
    margin: 0;
    border: none;
    padding: 0;
    width: <tiny_arrow_button_size>;
    height: <tiny_arrow_button_size>;
}

QScrollBar::up-arrow:vertical
{
    image: url(<icons_path>/arrow_up_tiny.png);
}

QScrollBar::down-arrow:vertical
{
    image: url(<icons_path>/arrow_down_tiny.png);
}

QScrollBar::left-arrow:horizontal
{
    image: url(<icons_path>/arrow_left_tiny.png);
}

QScrollBar::right-arrow:horizontal
{
    image: url(<icons_path>/arrow_right_tiny.png);
}

QSlider::groove:horizontal
{
    background-color: <scrollbar_bg_colour>;
    height: <slider_thickness>;
}

QSlider::handle:horizontal
{
    margin: 0;
    width: <slider_handle_size>;
    background-color: <bg_colour>;
}

QSplitter::handle:horizontal
{
    padding: <tiny_padding>;
    image: url(<icons_path>/splitter_horizontal.png);
}

QSplitter::handle:vertical
{
    padding: <tiny_padding>;
    image: url(<icons_path>/splitter_vertical.png);
}

QTabWidget::tab-bar
{
    left: <tab_bar_margin>;
}

QTabBar::tab
{
    border: <border_thin_width> solid;
    border-top-color: <bg_colour_light>;
    border-left-color: <bg_colour_light>;
    border-right-color: <bg_colour_dark>;
    border-top-left-radius: <border_thick_radius>;
    border-top-right-radius: <border_thick_radius>;
    border-bottom: none;
    min-width: 2em;
    margin: 0;
    padding: <small_padding> <large_padding> <small_padding> <large_padding>;
}

QTabBar::tab:selected
{
}

QTabBar::tab:!selected
{
    margin-top: <medium_padding>;
    border-top-color: <tab_shade_top_colour_light>;
    border-left-color: <tab_shade_top_colour_light>;
    border-right-color: <tab_shade_top_colour_dark>;
    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
        stop: 0.5 <tab_shade_top_colour>, stop: 1 <tab_shade_bottom_colour>);
    color: <button_fg_colour>;
}

QTableView, QTreeView, QListView, QTextEdit
{
    margin: 0;
    padding: 0;
    background-color: <text_bg_colour>;
    color: <text_fg_colour>;
}

QTableView:disabled, QTreeView:disabled, QListView:disabled, QTextEdit:disabled
{
    color: <text_disabled_fg_colour>;
}

QTableView
{
    gridline-color: <bg_colour_dark>;
}

QTableView QTableCornerButton::section
{
    background-color: <bg_colour>;
    border: none;
}

QToolBar
{
    border-radius: 0;
}

QToolBar::separator
{
    margin: <small_padding> <medium_padding>;
    border: <border_thin_width> solid;
    border-top-color: <bg_colour_dark>;
    border-left-color: <bg_colour_dark>;
    border-right-color: <bg_colour_light>;
    border-bottom-color: <bg_colour_light>;
    padding: 0;
    width: 0;
}
/* ... */

